--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav id="desktop-nav">
     <div class="logo">
-      <img src="/Assets/name.png" alt="" style="width: 10; height: 5rem;">
+      <img src="./Assets/name.png" alt="" style="width: 10; height: 5rem;">
     </div>
     <div>
       <ul class="nav-links">
@@ -43,7 +43,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img src="/Assets/profile-pic.png" alt="Loading....." />
+      <img src="./Assets/profile-pic.png" alt="Loading....." />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -58,12 +58,11 @@
         </button>
       </div>
       <div id="socials-container">
-        <img src="/Assets/linkedin.png" alt="My LinkedIn profile" class="icon"
-          onclick="location.href='https://www.linkedin.com/in/mohammad-rizwaan-ansari-99b2ab277/'" />
-        <img src="/Assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/wrizzzlerrr'" />
+        <img src="./Assets/linkedin.png"location.href='https://www.linkedin.com/in/mohammad-rizwaan-ansari-99b2ab277/'" />
+        <img src="./Assets/github.png" alt="My Github profile" class="icon" onclick="location.href='https://github.com/wrizzzlerrr'" />
       </div>
     </div>
-    <img src="/Assets/arrow.png" alt="Arrow icon" class="icon arrow icon1" onclick="location.href='./#about'" />
+    <img src="./Assets/arrow.png" alt="Arrow icon" class="icon arrow icon1" onclick="location.href='./#about'" />
   </section>
   <br>
   <br>
@@ -77,17 +76,17 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section__pic-container">
-        <img src="/Assets/about-pic.jpeg" alt="Profile picture" class="about-pic" />
+        <img src="./Assets/about-pic.jpeg" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <img src="/Assets/experience.png" alt="Experience icon" class="icon" />
+            <img src="./Assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Experience</h3>
             <p>2+ years <br />Frontend Development</p>
           </div>
           <div class="details-container">
-            <img src="/Assets/education.png" alt="Education icon" class="icon" />
+            <img src="./Assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
             <p>B.Tech. Bachelors Degree<br /></p>
           </div>
@@ -104,7 +103,7 @@
         </div>
       </div>
     </div>
-    <img src="/Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
+    <img src="./Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#experience'" />
   </section>
   <section id="experience">
     <p class="section__text__p1">Explore My</p>
@@ -115,28 +114,28 @@
           <h2 class="experience-sub-title">Frontend Development</h2>
           <div class="article-container">
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>HTML</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>CSS</h3>
                 <p>Experienced</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>JavaScript</h3>
                 <p>Intermediate</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>React</h3>
                 <p>Basic</p>
@@ -148,28 +147,28 @@
           <h2 class="experience-sub-title">Backend Development</h2>
           <div class="article-container">
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>PostgreSQL</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Node JS</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Express JS</h3>
                 <p>Basic</p>
               </div>
             </article>
             <article>
-              <img src="/Assets/checkmark.png" alt="Experience icon" class="icon" />
+              <img src="./Assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Git</h3>
                 <p>Intermediate</p>
@@ -179,7 +178,7 @@
         </div>
       </div>
     </div>
-    <img src="/Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+    <img src="./Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
@@ -188,7 +187,7 @@
       <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/Assets/project-1.png" alt="Project 1" class="project-img" />
+            <img src="./Assets/project-1.png" alt="Project 1" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project One</h2>
           <div class="btn-container">
@@ -202,7 +201,7 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/Assets/project-2.png" alt="Project 2" class="project-img" />
+            <img src="./Assets/project-2.png" alt="Project 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project Two</h2>
           <div class="btn-container">
@@ -216,7 +215,7 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="/Assets/project-3.jpeg" alt="Project 3" class="project-img" />
+            <img src="./Assets/project-3.jpeg" alt="Project 3" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Project Three</h2>
           <div class="btn-container">
@@ -230,18 +229,18 @@
         </div>
       </div>
     </div>
-    <img src="/Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
+    <img src="./Assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
-        <img src="/Assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
+        <img src="./Assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
         <p><a href="mailto:rizzz.college@gmail.com">rizzz.college@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
-        <img src="/Assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
+        <img src="./Assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
         <p><a href="https://www.linkedin.com/in/mohammad-rizwaan-ansari-99b2ab277/">LinkedIn</a></p>
       </div>
     </div>
